# flask-shell-ipython

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flask_shell_ipython.py  pyproject.toml  requirements-test.txt  setup.cfg  setup.py  test_flask_shell_ipython.py
.github/workflows/: release.yml
