[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-shell-ipython"
version = "0.5.2.post1"
description = "Replace default `flask shell` command by similar command running IPython."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.6"
license = { file = "LICENSE" }
authors = [
    { name = "Andrew Grigorev", email = "andrew@ei-grad.ru" }
]
homepage = "https://github.com/ei-grad/flask-shell-ipython"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Flask",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "Flask>=1.0",
    "click",
    "IPython>=5.0.0"
]

[project.entry-points."flask.commands"]
shell = "flask_shell_ipython:shell"
